Mon Jun  3 00:01:47 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/Makefile.am (AM_LOG_FLAGS): Force each test to run with
	  the configure-detected shell.

Thu May 30 12:57:50 BST 2013  Peter Schiffer  <pschiffe@redhat.com>
                              Colin Watson  <cjwatson@debian.org>

	Add support for wildcards in MANPATH (Fedora bug #677669).

	* src/Makefile.am (catman_SOURCES, manpath_SOURCES, whatis_SOURCES):
	  Add globbing.c and globbing.h.
	* src/globbing.c (expand_path): New function.
	* src/globbing.h (expand_path): Add prototype.
	* src/manp.c (add_dir_to_list): Rename to ...
	  (add_expanded_dir_to_list): ... this.
	  (add_dir_to_list): New function, expanding wildcards and wrapping
	  add_expanded_dir_to_list.
	  (add_dir_to_path_list): Expand wildcards.
	* src/tests/man-4: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add man-4.

Thu May 30 11:51:54 BST 2013  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Remove gnulib/gets.patch.

Thu 30 May 11:42:29 BST 2013  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.13.2 and Gnulib 20130529.

	* .bzrignore: Add gnulib/lib/locale.h, man/**/*.log, man/**/*.trs,
	  src/tests/*.log, and src/tests/*.trs.
	* autogen.sh: Drop gnulib/gets.patch backport.
	* gnulib/gets.patch: Remove.
	* configure.ac (AM_INIT_AUTOMAKE): Set minimum Automake version to
	  1.11.  Add parallel-tests option for compatibility with 1.11.
	* man/Rules.man (TESTS_ENVIRONMENT): Move to ...
	  (LOG_COMPILER): ... this.
	* src/tests/Makefile.am (TESTS_ENVIRONMENT): Rewrite as a list of
	  variable exports rather than as a command prefix, for
	  compatibility with parallel-tests.

Tue May 14 22:55:09 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Define YY_NO_INPUT, suppressing a -Wunused-function
	  warning from GCC.
	* src/zsoelim.l: Likewise.

Tue May  7 15:27:28 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/man.c (escape_less): Revert handling of incompatible option